tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/parameterTypeNotFound.csl
//The second parameter type does not exist
interface parameterTypeNotFound
{
	void Foo
		( in string fooMe,
		  in IDontExixst fooMeToo );

};	


